--- a/pages/shootView/shootView.scss
+++ b/pages/shootView/shootView.scss
@@ -3,6 +3,11 @@
 		margin-right: 30rpx;
 	}
 	
+	.btn-cnt{
+		padding-bottom: constant(safe-area-inset-bottom);
+		padding-bottom: env(safe-area-inset-bottom);
+	}
+	
 	.datainfo{
 		.back1{
 			background-color: #5B7897;
