--- a/pages/shootView/shootView.scss
+++ b/pages/shootView/shootView.scss
@@ -310,6 +310,7 @@
 		.send-btn {
 			background-color: #fff;
 			margin: 20rpx;
+			margin-top: 50rpx;
 			color: #354D5B;
 			line-height: 80rpx;
 			padding-left: 50rpx;
