--- a/pages/shootView/shootView.scss
+++ b/pages/shootView/shootView.scss
@@ -8,6 +8,7 @@
 	
 	.back{
 		position: absolute;
+		background-color: #1c1c1c;
 		z-index: 2;
 		left: 0;
 		right: 0;
@@ -42,7 +43,7 @@
 			margin-left: 20rpx;
 			border-top-right-radius: 20rpx;
 			border-bottom-right-radius: 20rpx;
-			color: #5B7897;
+			color: #fff;
 			font-size: 26rpx;
 		}
 		
