--- a/pages/shootView/shootView.scss
+++ b/pages/shootView/shootView.scss
@@ -169,6 +169,18 @@
 		bottom: var(--bottom);
 		position: absolute;
 	}
+	
+	.backUpPointWrap {
+		left: var(--left);
+		bottom: var(--bottom);
+		position: absolute;
+	}
+	
+	.backDownPointWrap {
+		left: var(--left);
+		bottom: var(--bottom);
+		position: absolute;
+	}
 
 	.frontPic image {
 		width: 100%;
