--- a/pages/shootView/shootView.scss
+++ b/pages/shootView/shootView.scss
@@ -3,12 +3,22 @@
 		margin-right: 30rpx;
 		position: relative;
 		top: 0;
-		z-index: 10;
+		z-index: 1;
+	}
+	
+	.uni-common-mt{
+		position: relative;
+		z-index: 3;
+	}
+	
+	.info-part{
+		position: relative;
+		z-index: 3;
 	}
 	
 	.back{
 		position: absolute;
-		background-color: #1c1c1c;
+		// background-color: #1c1c1c;
 		z-index: 2;
 		left: 0;
 		right: 0;
@@ -20,6 +30,8 @@
 	}
 	
 	.btn-cnt{
+		position: relative;
+		z-index: 3;
 		padding-bottom: constant(safe-area-inset-bottom);
 		padding-bottom: env(safe-area-inset-bottom);
 	}
@@ -261,13 +273,14 @@
 
 
 	.circle {
-		width: 16rpx;
-		height: 16rpx;
-		color: red;
-		margin-left: -8rpx;
-		margin-top: -8rpx;
-		background-color: red;
+		width: 53rpx;
+		height: 71rpx;
+		margin-left: -27rpx;
+		margin-top: -36rpx;
+		// background-color: red;
 		border-radius: 50%;
+		background-size: 100% 100%;
+		background-image: url('../../static/points.png');
 	}
 
 	.tips {
