--- a/pages/shootView/shootView.scss
+++ b/pages/shootView/shootView.scss
@@ -166,6 +166,7 @@
 		height: var(--imgHeight);
 		margin: 0 auto;
 		position: relative;
+		    top: 100rpx;
 		// background-color: #5B7897;
 	}
 
