--- a/pages/shootView/shootView.scss
+++ b/pages/shootView/shootView.scss
@@ -4,15 +4,17 @@
 	height: 100%;
 }
 .main {
-
+	height: 100%;
+	background-color: rgb(17, 30, 63);
 		position: relative;
 		top: 0;
 		z-index: 1;
 	}
 	
 	.uni-common-mt{
-		position: relative;
+		position: absolute;
 		z-index: 3;
+		bottom: 250rpx;
 	}
 	
 	.info-part{
@@ -34,8 +36,12 @@
 	}
 	
 	.btn-cnt{
-		position: relative;
+		position: absolute;
+		    left: 50%;
+		    width: 100%;
+		    transform: translateX(-50%);
 		z-index: 3;
+		bottom: 80rpx;
 		padding-bottom: constant(safe-area-inset-bottom);
 		padding-bottom: env(safe-area-inset-bottom);
 	}
